# rust-cli-my-gnu-stow-dotty

./: AGENTS.md  Cargo.toml  README.md  TODO.md  test.lua
src/: main.rs
tests/: basic.rs  directory_link.rs  identical.rs  nested.rs  rename.rs  transform.rs
