[package]
name = "dotty"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
atty = "0.2"
assert_cmd = { version = "2", dev-dependencies = true }
predicates = { version = "3", dev-dependencies = true }
tempfile = { version = "3", dev-dependencies = true }
